# otg-usb-free

./: .gitignore  NOTICE  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  compute_pipeline.cpp  compute_pipeline.h  frame_uploader.cpp  frame_uploader.h  jni_bridge.cpp  preview_renderer.cpp  preview_renderer.h  vulkan_context.cpp  vulkan_context.h  vulkan_swapchain.cpp  vulkan_swapchain.h
app/src/main/cpp/shaders/: postprocess.comp
app/src/main/cpp/utils/: log.h  vk_check.h
app/src/main/java/com/example/otgcam/: AspectController.kt  MainActivity.kt  Settings.kt  VulkanRenderer.kt
app/src/main/res/drawable/: bg_action_button.xml  bg_cam_badge.xml  bg_hint_pill.xml  bg_icon_button.xml  bg_settings_panel.xml  bg_top_gradient.xml  dot_connecting.xml  dot_streaming.xml  ic_app.xml  ic_brightness.xml  ic_camera.xml  ic_enh.xml  ic_fullscreen.xml  ic_info.xml  ic_launcher_compat.xml  ic_settings.xml  ic_snapshot.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: device_filter.xml
docs/: index.html  privacy-policy.html
